Unit/integration tests successful